# opcua-sensor-interface

./: CMakeLists.txt  Device.h  DeviceData.cpp  DeviceData.h  DeviceDataFile.cpp  DeviceDataFile.h  DeviceDataLWM2M.cpp  DeviceDataLWM2M.h  DeviceDataObserver.h  DeviceDataValue.h  README.md  Sensor.h  SensorData.cpp  SensorData.h  SensorDataFile.cpp  SensorDataFile.h  SensorDataLWM2M.h  SensorDataValue.h
